// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Performance: metrics evaluates valid input (with lcp from all frames) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 16,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 668,
  "firstCPUIdleTs": 10238937930,
  "firstContentfulPaint": 668,
  "firstContentfulPaintTs": 10238937930,
  "firstMeaningfulPaint": 668,
  "firstMeaningfulPaintTs": 10238937930,
  "interactive": 668,
  "interactiveTs": 10238937930,
  "largestContentfulPaint": 668,
  "largestContentfulPaintAllFrames": 2258,
  "largestContentfulPaintAllFramesTs": 10240528038,
  "largestContentfulPaintTs": 10238937930,
  "maxPotentialFID": 16,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 605,
  "observedDomContentLoadedTs": 10238874657,
  "observedFirstContentfulPaint": 668,
  "observedFirstContentfulPaintTs": 10238937930,
  "observedFirstMeaningfulPaint": 668,
  "observedFirstMeaningfulPaintTs": 10238937930,
  "observedFirstPaint": 668,
  "observedFirstPaintTs": 10238937930,
  "observedFirstVisualChange": 671,
  "observedFirstVisualChangeTs": 10238940760,
  "observedLargestContentfulPaint": 668,
  "observedLargestContentfulPaintAllFrames": 2258,
  "observedLargestContentfulPaintAllFramesTs": 10240528038,
  "observedLargestContentfulPaintTs": 10238937930,
  "observedLastVisualChange": 704,
  "observedLastVisualChangeTs": 10238973760,
  "observedLoad": 684,
  "observedLoadTs": 10238953674,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 10238269760,
  "observedSpeedIndex": 688,
  "observedSpeedIndexTs": 10238957680,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 10238269760,
  "observedTraceEnd": 5994,
  "observedTraceEndTs": 10244264001,
  "speedIndex": 688,
  "speedIndexTs": 10238957760,
  "totalBlockingTime": 0,
}
`;

exports[`Performance: metrics evaluates valid input (with lcp) correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 543,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 3677,
  "firstCPUIdleTs": undefined,
  "firstContentfulPaint": 2289,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 2758,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 4462,
  "interactiveTs": undefined,
  "largestContentfulPaint": 2758,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 1336,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 1513,
  "observedDomContentLoadedTs": 713038536140,
  "observedFirstContentfulPaint": 1122,
  "observedFirstContentfulPaintTs": 713038144775,
  "observedFirstMeaningfulPaint": 1122,
  "observedFirstMeaningfulPaintTs": 713038144775,
  "observedFirstPaint": 1122,
  "observedFirstPaintTs": 713038144775,
  "observedFirstVisualChange": 1105,
  "observedFirstVisualChangeTs": 713038128064,
  "observedLargestContentfulPaint": 1122,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": 713038144775,
  "observedLastVisualChange": 1722,
  "observedLastVisualChangeTs": 713038745064,
  "observedLoad": 2159,
  "observedLoadTs": 713039182071,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 713037023064,
  "observedSpeedIndex": 1393,
  "observedSpeedIndexTs": 713038416494,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 713037023064,
  "observedTraceEnd": 7416,
  "observedTraceEndTs": 713044439102,
  "speedIndex": 3681,
  "speedIndexTs": undefined,
  "totalBlockingTime": 1167,
}
`;

exports[`Performance: metrics evaluates valid input correctly (throttlingMethod=provided) 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 17,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 1582,
  "firstCPUIdleTs": 225415754204,
  "firstContentfulPaint": 499,
  "firstContentfulPaintTs": 225414670885,
  "firstMeaningfulPaint": 783,
  "firstMeaningfulPaintTs": 225414955343,
  "interactive": 1582,
  "interactiveTs": 225415754204,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 198,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 605,
  "speedIndexTs": 225414777015,
  "totalBlockingTime": 48,
}
`;

exports[`Performance: metrics evaluates valid input correctly 1`] = `
Object {
  "cumulativeLayoutShift": 0,
  "estimatedInputLatency": 78,
  "estimatedInputLatencyTs": undefined,
  "firstCPUIdle": 3351,
  "firstCPUIdleTs": undefined,
  "firstContentfulPaint": 1337,
  "firstContentfulPaintTs": undefined,
  "firstMeaningfulPaint": 1553,
  "firstMeaningfulPaintTs": undefined,
  "interactive": 3427,
  "interactiveTs": undefined,
  "largestContentfulPaint": undefined,
  "largestContentfulPaintAllFrames": undefined,
  "largestContentfulPaintAllFramesTs": undefined,
  "largestContentfulPaintTs": undefined,
  "maxPotentialFID": 396,
  "observedCumulativeLayoutShift": 0,
  "observedDomContentLoaded": 560,
  "observedDomContentLoadedTs": 225414732309,
  "observedFirstContentfulPaint": 499,
  "observedFirstContentfulPaintTs": 225414670885,
  "observedFirstMeaningfulPaint": 783,
  "observedFirstMeaningfulPaintTs": 225414955343,
  "observedFirstPaint": 499,
  "observedFirstPaintTs": 225414670868,
  "observedFirstVisualChange": 520,
  "observedFirstVisualChangeTs": 225414692015,
  "observedLargestContentfulPaint": undefined,
  "observedLargestContentfulPaintAllFrames": undefined,
  "observedLargestContentfulPaintAllFramesTs": undefined,
  "observedLargestContentfulPaintTs": undefined,
  "observedLastVisualChange": 818,
  "observedLastVisualChangeTs": 225414990015,
  "observedLoad": 2199,
  "observedLoadTs": 225416370913,
  "observedNavigationStart": 0,
  "observedNavigationStartTs": 225414172015,
  "observedSpeedIndex": 605,
  "observedSpeedIndexTs": 225414776724,
  "observedTimeOrigin": 0,
  "observedTimeOriginTs": 225414172015,
  "observedTraceEnd": 12540,
  "observedTraceEndTs": 225426711887,
  "speedIndex": 1676,
  "speedIndexTs": undefined,
  "totalBlockingTime": 726,
}
`;
